[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Popups/NewMapNoise.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.0313726, 0.0313726, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.352941, 0.00392157, 0.00392157, 1 )
border_blend = true

[node name="NewMapNoise" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -119.0
margin_right = 114.0
margin_bottom = 119.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -119.0
margin_right = 114.0
margin_bottom = 119.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 226.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 14.0
text = "Create new Map from a Noise map"

[node name="Name" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 224.0
margin_bottom = 42.0
placeholder_text = "Name of map"

[node name="Width" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 224.0
margin_bottom = 70.0
max_value = 10000.0
allow_greater = true
prefix = "Width:"

[node name="Height" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 224.0
margin_bottom = 98.0
max_value = 10000.0
allow_greater = true
prefix = "Height:"

[node name="Octave" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 224.0
margin_bottom = 126.0
min_value = 1.0
value = 1.0
prefix = "Octaves:"

[node name="Period" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 224.0
margin_bottom = 154.0
step = 0.01
allow_greater = true
prefix = "Period:"

[node name="Persistence" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 224.0
margin_bottom = 182.0
step = 0.01
prefix = "Persistence:"

[node name="SeedLine" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 224.0
margin_bottom = 210.0
placeholder_text = "Seed: Optional"

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 224.0
margin_bottom = 234.0
text = "Create Map"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Width" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Height" to="." method="_on_Height_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Octave" to="." method="_on_Octave_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Period" to="." method="_on_Period_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Persistence" to="." method="_on_Persistence_value_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/SeedLine" to="." method="_on_SeedLine_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
